Fix #59: Realigned delete button for track on timeline.

--- a/style/style.css
+++ b/style/style.css
@@ -6063,7 +6063,7 @@ div.timeline-groups-text div.timeline-group:hover {
   background-color: #e6e6e6;
 }
 div.timeline-groups-text div.timeline-group div.content {
-  width: 125px;
+  width: 122px;
   overflow: hidden;
   white-space: nowrap;
   overflow: hidden;
@@ -6078,6 +6078,7 @@ div.timeline-groups-text.selected div.timeline-group:hover {
 div.timeline-groups-text i.delete {
   z-index: 4;
   float: left;
+  margin-top: 5.5px;
 }
 div.timeline-groups-text i.delete:hover {
   cursor: pointer;
