--- a/style/timeline/timeline-custom.less
+++ b/style/timeline/timeline-custom.less
@@ -39,7 +39,7 @@ div.timeline-groups-text{
         }
         
         div.content{
-            width: 125px;
+            width: 122px;
             overflow: hidden;
             white-space: nowrap;
             overflow: hidden;
@@ -59,6 +59,7 @@ div.timeline-groups-text{
         
         z-index: 4;
         float: left;
+        margin-top: 5.5px;
         
         &:hover {
             cursor: pointer;
